fix filter category alignment

--- a/assets/sass/pages/_product.scss
+++ b/assets/sass/pages/_product.scss
@@ -951,7 +951,7 @@ $product-container-padding: 0 50px;
                     padding-right: 0;
 
                     a {
-                        float: 1;
+                        flex: 1;
                     }
                 }
             }
